fix: post TypeName -> Domain
